--- a/Ed.BudgetVisualizer/wwwroot/index.html
+++ b/Ed.BudgetVisualizer/wwwroot/index.html
@@ -21,6 +21,8 @@
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/BlazorInputFile/inputfile.js"></script>
+    <!-- Uncomment once the Blazor bug has been fixed -->
+    <!--<script src="_content/BlazorInputFile/inputfile.js"></script>-->
+    <script src="js/inputfile.js"></script>
 </body>
 </html>
