Fixed some bugs, updated Blazor packages

--- a/Ed.BudgetVisualizer/wwwroot/index.html
+++ b/Ed.BudgetVisualizer/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ed.BudgetVisualizer</title>
+    <title>Budget Visualizer</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <!-- Uncomment once the Blazor bug has been fixed -->
+    <!-- TODO: Uncomment once the Blazor bug has been fixed -->
     <!--<script src="_content/BlazorInputFile/inputfile.js"></script>-->
     <script src="js/inputfile.js"></script>
 </body>
