--- a/Ed.BudgetVisualizer/wwwroot/index.html
+++ b/Ed.BudgetVisualizer/wwwroot/index.html
@@ -12,6 +12,8 @@
     <script src="https://www.amcharts.com/lib/4/charts.js"></script>
     <script src="https://www.amcharts.com/lib/4/themes/material.js"></script>
     <script src="js/main.js"></script>
+
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
     <app>
