--- a/Ed.BudgetVisualizer/wwwroot/index.html
+++ b/Ed.BudgetVisualizer/wwwroot/index.html
@@ -1,30 +1,46 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Budget Visualizer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Ed.BudgetVisualizer</title>
+
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    <link href="Ed.BudgetVisualizer.styles.css" rel="stylesheet" />
+
+    <link href="manifest.webmanifest" rel="manifest" />
+
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="icon-256.png" />
 
     <script src="https://www.amcharts.com/lib/4/core.js"></script>
     <script src="https://www.amcharts.com/lib/4/charts.js"></script>
     <script src="https://www.amcharts.com/lib/4/themes/material.js"></script>
     <script src="js/main.js"></script>
-
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
-<body>
-    <app>
-        <div class="frame">
-            <img class="loader" src="img/loader.gif" />
-        </div>
-    </app>
 
+<body>
+    <div id="app">
+        <svg class="loading-progress">
+            <circle r="40%" cx="50%" cy="50%" />
+            <circle r="40%" cx="50%" cy="50%" />
+        </svg>
+        <div class="loading-progress-text"></div>
+    </div>
+
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <!-- TODO: Uncomment once the Blazor bug has been fixed -->
-    <!--<script src="_content/BlazorInputFile/inputfile.js"></script>-->
-    <script src="js/inputfile.js"></script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
+
 </html>
